Bug: 73595 IE: Unwanted scrollbar appeared on typing quick reply textarea Set overflow to auto, add parent div to deal with IE text area
http://bugzilla.zimbra.com/show_bug.cgi?id=73595

Copied from Perforce
 Change: 369422

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -893,6 +893,7 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 .Conv2Reply .ReplyTextarea {
 	width:100%;
 	height:100px;
+    overflow: auto;
 }
 
 .Conv2Reply .ZToolbarTable>TBODY>TR>TD {
